--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ThirdParty/framelesshelper"]
 	path = ThirdParty/framelesshelper
 	url = https://github.com/wangwenx190/framelesshelper.git
+[submodule "ThirdParty/googletest"]
+	path = ThirdParty/googletest
+	url = https://github.com/google/googletest.git
