--- a/test/Aria2Net/CMakeLists.txt
+++ b/test/Aria2Net/CMakeLists.txt
@@ -1,7 +1,11 @@
 set(Aria2Net_test Aria2Net_test)
 file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
 file(GLOB_RECURSE TESTED_SOURCES LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/Aria2Net/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/Aria2Net/*.cpp)
-set(SOURCES ${TEST_SOURCES} ${TESTED_SOURCES})
+file(GLOB_RECURSE TESTED_DEPANDED_SOURCES LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/NetWork/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/NetWork/*.cpp
+                                                                ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/BiliApi/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/BiliApi/*.cpp
+                                                                ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/Util/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/Util/*.cpp
+                                                                ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/FFmpeg/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/FFmpeg/*.cpp)
+set(SOURCES ${TEST_SOURCES} ${TESTED_SOURCES} ${TESTED_DEPANDED_SOURCES})
 
 set(CMAKE_AUTOMOC ON)
 # qt
@@ -28,5 +32,13 @@ target_link_libraries(${Aria2Net_test}
     PRIVATE
         GTest::gtest_main
         spdlog::spdlog
+        nlohmann_json::nlohmann_json
+        CURL::libcurl
         ${QT_LIBS}
+)
+
+# build event
+add_custom_command(TARGET ${Aria2Net_test}
+    POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory  ${CMAKE_CURRENT_SOURCE_DIR}/../../tools $<TARGET_FILE_DIR:${PROJECT_NAME}>
 )
