--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,12 @@
 
-
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/../ThirdParty/googletest/googletest/include
-)
+enable_testing()
+include(GoogleTest)
+#include_directories(
+#    ${CMAKE_CURRENT_SOURCE_DIR}/../ThirdParty/googletest/googletest/include
+#)
 
 add_compile_definitions(TEST_PROJ_DIR=L"${CMAKE_CURRENT_SOURCE_DIR}")
-add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/../ThirdParty/googletest test_binary_dir)
+add_subdirectory(../ThirdParty/googletest test_binary_dir)
 
 option(SQLite_test "ENABLE SQLite test" ON)
 if(SQLite_test)
@@ -19,6 +20,7 @@ endif()
 
 option(Aria2Net_test "ENABLE Aria2Net_test test" ON)
 if(Aria2Net_test)
+    message(STATUS "enable Aria2Net_test")
     add_subdirectory(Aria2Net)
 endif()
 
