--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -2,9 +2,9 @@ name: CI-Linux
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "WangPengZhan-patch-1" ]
   pull_request:
-    branches: [ "dev" ]
+    branches: [ "WangPengZhan-patch-1" ]
 
   # Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
