--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -18,8 +18,8 @@ jobs:
     strategy:
       matrix:
         build_type: [Release]
-        c_compiler: gcc
-        cpp_compiler: g++
+        c_compiler: [gcc]
+        cpp_compiler: [g++]
 
 
 
