--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     name: ${{ matrix.config.name }}
-    runs-on: windows-2019
+    runs-on: macos-latest
     timeout-minutes: 120
 
     strategy:
