windows build all error

--- a/.github/workflows/ci-win.yml
+++ b/.github/workflows/ci-win.yml
@@ -63,7 +63,7 @@ jobs:
           -S ${{ github.workspace }}
 
       - name:  Build Project
-        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target all --
+        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target all_build --
         
       - name:  Install Project
         run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target install --
