--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -74,7 +74,7 @@ jobs:
       - name:  Install Project
         run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target install --
 
-      - name: Test
-        working-directory: ${{ github.workspace }}/build
-        run: ctest --build-config ${{ matrix.build_type }}
+      # - name: Test
+      #   working-directory: ${{ github.workspace }}/build
+      #   run: ctest --build-config ${{ matrix.build_type }}
 
