--- a/.github/workflows/ci-win.yml
+++ b/.github/workflows/ci-win.yml
@@ -2,9 +2,9 @@ name: ci-windows
 
 on:
   push:
-    branches: [ "WangPengZhan-patch-1" ]
+    branches: [ "dev" ]
   pull_request:
-    branches: [ "WangPengZhan-patch-1" ]
+    branches: [ "dev" ]
 
 
   # Allows you to run this workflow manually from the Actions tab.
@@ -67,7 +67,8 @@ jobs:
         
       - name:  Install Project
         run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target install --
-
-      - name: Test
-        working-directory: ${{ github.workspace }}/build
-        run: ctest --build-config ${{ matrix.build_type }}
+        
+      # when stable to test
+      # - name: Test
+      #   working-directory: ${{ github.workspace }}/build
+      #   run: ctest --build-config ${{ matrix.build_type }}
