adjust windows cmake target

--- a/.github/workflows/ci-win.yml
+++ b/.github/workflows/ci-win.yml
@@ -63,11 +63,11 @@ jobs:
           -S ${{ github.workspace }}
 
       - name:  Build Project
-        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target sVanilla --
+        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target all_build --
         
       - name:  Install Project
         run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target install --
-        
+
       # when stable to test
       # - name: Test
       #   working-directory: ${{ github.workspace }}/build
