--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "ThirdParty/spdlog"]
 	path = ThirdParty/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "ThirdParty/vanillastyle"]
+	path = ThirdParty/vanillastyle
+	url = https://github.com/AlanusMeminius/VanillaStyle
