--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/gabime/spdlog.git
 [submodule "ThirdParty/vanillastyle"]
 	path = ThirdParty/vanillastyle
-	url = https://github.com/AlanusMeminius/VanillaStyle
+	url = https://github.com/AlanusMeminius/VanillaStyle.git
