feature(ui): fix mac icon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,13 @@ if (ENABLE_TEST)
 endif()
 
 include(cmake/appicon.cmake)
-appicon(${PROJECT_NAME} sVanilla/resource/app.ico RESOURCE_FILES)
+if (APPLE)
+    set(ICON_FILE_NAME "app.icns")
+    list(APPEND UI ${ICON_FILE})
+else ()
+    set(ICON_FILE_NAME "app.ico")
+endif ()
+appicon(${PROJECT_NAME} sVanilla/resource/${ICON_FILE_NAME} RESOURCE_FILES)
 message("RESOURCE_FILES: ${RESOURCE_FILES}")
 
 add_executable(${PROJECT_NAME}
